--- a/lib/magic_limiter_web/templates/page/pool.html.eex
+++ b/lib/magic_limiter_web/templates/page/pool.html.eex
@@ -1,3 +1,4 @@
+<h2>Your pool</h2>
 <ul>
   <%= for card <- @cards do %>
     <li>
@@ -6,6 +7,7 @@
   <% end %>
 </ul>
 
+<h2>Your boosters</h2>
 <%= for booster <- @boosters do %>
   <hr/>
   <ul>
