--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -26,7 +26,7 @@ body, form, ul, table {
   height: 100px;
   display: inline-block;
   margin-bottom: 1em;
-  background-image: url("/images/MTGlogo.jpg");
+  background-image: url("../images/MTGlogo.jpg");
   background-size: 341px 100px;
 }
 
