--- a/lib/magic_limiter_web/templates/page/index.html.eex
+++ b/lib/magic_limiter_web/templates/page/index.html.eex
@@ -1,12 +1,15 @@
+Questions? <a href="<%= page_path(@conn, :faq) %>">Answers!</a>
+
 <%= form_for @conn, page_path(@conn, :index), [as: :pool_params], fn form -> %>
-  <%= label(form, :card_list, "Your card pool") %>
-  <br />
-  <%= textarea(form, :card_list) %>
-  <br />
-  <%= label(form, :number_of_boosters, "Number of boosters") %>
-  <br />
-  <%= number_input(form, :number_of_boosters, min: "1", value: "6") %>
-  <br />
-  <br />
-  <%= submit "Say go!" %>
+  <div class="form-group">
+    <%= label(form, :card_list, "Your card pool") %>
+    <%= textarea(form, :card_list, [{:"aria-describedby", "card_list_help"}, class: "form-control", autofocus: true, rows: 5]) %>
+    <span id="card_list_help" class="help-block">Enter one card per line (englisch names only). You can write the count in front of it, i.e. "10 Fireball".</span>
+  </div>
+  <div class="form-group">
+    <%= label(form, :number_of_boosters, "Number of boosters") %>
+    <%= number_input(form, :number_of_boosters, [{:"aria-describedby", "number_of_boosters_help"}, min: "1", value: "6", class: "form-control"]) %>
+    <span id="number_of_boosters_help" class="help-block">The number of boosters you want to generate from your card pool.</span>
+  </div>
+  <%= submit "Say go!", class: "btn btn-primary" %>
 <% end %>
