Make header link to home page

--- a/lib/magic_limiter_web/templates/layout/app.html.eex
+++ b/lib/magic_limiter_web/templates/layout/app.html.eex
@@ -20,7 +20,9 @@
             <li><a href="<%= page_path(@conn, :faq) %>">FAQ</a></li>
           </ul>
         </nav>
-        <span class="logo"></span>
+        <a href="<%= page_path(@conn, :index) %>">
+          <span class="logo"></span>
+        </a>
 
         <h1>Limited Booster Generator</h1>
       </header>
