--- a/lib/magic_limiter_web/templates/page/pool.html.eex
+++ b/lib/magic_limiter_web/templates/page/pool.html.eex
@@ -1,16 +1,27 @@
 <h2>Your boosters</h2>
-<%= for booster <- @boosters do %>
-  <hr/>
-  <ul>
-    <%= for card <- booster do %>
-      <li>
-        <%= render_card(card) %>
-      </li>
-    <% end %>
-  </ul>
+<%= for {booster, index} <- @boosters do %>
+  <div class="panel-group">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a data-toggle="collapse" href="#booster<%= index %>">Booster <%= index + 1%></a>
+      </h4>
+    </div>
+    <div id="booster<%= index %>" class="panel-collapse collapse">
+      <ul class="list-group">
+        <%= for card <- booster do %>
+          <li class="list-group-item">
+            <%= render_card(card) %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
+</div>
 <% end %>
 
 <h2>Your pool</h2>
+This is a list of all your cards and their determined rarity. Only cards with rarity <i>Common</i>, <i>Uncommon</i>, <i>Rare</i> or <i>Mythic Rare</i> were considered in the boosters above.
 <ul>
   <%= for card <- @cards do %>
     <li>
