--- a/lib/magic_limiter_web/templates/page/pool.html.eex
+++ b/lib/magic_limiter_web/templates/page/pool.html.eex
@@ -1,10 +1,13 @@
 <h2>Your boosters</h2>
 
 <%= if Enum.any?(@boosters) do %>
+  <p>
+    Click on a booster to open it.
+  </p>
   <%= for {booster, index} <- @boosters do %>
     <div class="panel-group">
       <div class="panel panel-default">
-        <div class="panel-heading">
+        <div class="panel-heading" data-toggle="collapse" data-target="#booster<%= index %>">
           <h4 class="panel-title">
             <a data-toggle="collapse" href="#booster<%= index %>">Booster <%= index + 1%></a>
           </h4>
