--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -22,12 +22,13 @@ body, form, ul, table {
   border-bottom: 1px solid #e5e5e5;
 }
 .logo {
-  width: 341px;
-  height: 100px;
+  margin-top: 10px;
+  width: 227px;
+  height: 67px;
   display: inline-block;
   margin-bottom: 1em;
   background-image: url("../images/MTGlogo.jpg");
-  background-size: 341px 100px;
+  background-size: 227px 67px;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
